plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'com.burp.custom'
version = '2.0-Pro'

repositories {
    mavenCentral()
}

dependencies {
    // Burp provides the API at runtime, so we only need it for compilation
    compileOnly 'net.portswigger.burp.extensions:montoya-api:2026.4'
    
    // Gson needs to be bundled into the jar
    implementation 'com.google.code.gson:gson:2.14.0'
    implementation 'com.google.re2j:re2j:1.7'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Disable the standard jar task to avoid confusion
jar {
    enabled = false
}

// Configure shadowJar to produce the main artifact
shadowJar {
    archiveClassifier.set('') // This ensures the output is just 'JsMinerPro-2.0-Pro.jar'
    
    // Relocate Gson to avoid conflicts with other extensions or Burp itself (good practice)
    relocate 'com.google.gson', 'com.burp.custom.shaded.gson'
    relocate 'com.google.re2j', 'com.burp.custom.shaded.re2j'
}

// Ensure running 'build' or 'assemble' runs shadowJar
assemble.dependsOn shadowJar

tasks.named('test') {
    useJUnitPlatform()
}
